fixed scrollbar increment

--- a/pages/discover/index.module.css
+++ b/pages/discover/index.module.css
@@ -85,8 +85,8 @@
 .cards::-webkit-scrollbar-button:single-button:horizontal:increment {
     height: 14px;
     width: 14px;
-    background-position: 4px 3px;
-    background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='100' fill='rgb(255, 255, 255)'><polygon points='0,50 50,100 50,0'/></svg>");
+    background-position: 5px 3px;
+    background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='100' fill='rgb(255, 255, 255)'><polygon points='0,0 0,100 50,50'/></svg>");
 }
 
 .cards::-webkit-scrollbar-button:single-button:horizontal:increment:hover {
